Changed everything to be able to use script to launch